--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,97 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  padding: 0;
   margin: 0;
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.background-blue {
+  background-color: #1c5380;
+  height: 300px;
+}
+
+#margin-page {
+  margin: -10% 25% 2%;
+  display: flex;
+  justify-content: space-between;
+}
+
+#all-content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  width: 50%;
+}
+
+#link-button {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 15%;
+  margin: 10px 0 0;
+}
+
+#instagram-description {
+  background-image: url("/images/frame.png");
+  background-size: 100% 100%;
+}
+
+#app-links {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 75%;
+  margin-right: 20%;
+  margin-top: 5%;
+}
+
+#footer {
+  
+}
+
+#footer-nav{
+  text-align: center;
+  
+}
+
+#footer-nav li {
+  list-style-type: none;
+  display: inline-block;
+}
+
+#footer-nav a {
+  text-decoration: none;
+  color: #1c5380;
+  font-weight: bold;
+  padding: 0 10px;
+}
+
+p {
+  padding: 0 5%;
+}
+
+h2 {
+  padding: 5% 5% 0;
+  color: #06365f;
+  font-weight: bold;
+}
+
+button {
+  background-color: #6c90af;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 7px 2px;
+  cursor: pointer;
+  font-weight: bold;  
+}
+
+#copyright {
+  color: black;
+  width: 140px
 }
