--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -6,5 +6,107 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 0 auto;
+}
+
+header {
+  background-image: url("../images/bgtile.png"), linear-gradient(to bottom, white, #1c5380);
+  height: 300px;
+}
+
+.container {
+  width: 800px;
+  height: 500px;
+  margin: 0 auto;
+  margin-top: -180px;
+}
+
+h1 {
+  color: #06365f;
+  font-size: 1.7em;
+  width: 280px;
+  margin: 20px;
+  padding: 20px;
+}
+
+.phones {
+  float: left;
+  height: 550px;
+}
+
+.rightside {
+  float: right;
+  width: 420px;
+  height: 550px;
+  margin-right: 30px;
+}
+
+.branding {
+  width: 500px;
+}
+
+.branding a {
+  color: lightgray;  
+  font-weight: bold;
+}
+
+.button {
+  border: 1px solid #1c5380;
+  border-radius: 4px;
+  padding: 10px;
+  float: right;
+  margin-top: 15px;
+  font-size: 14px;
+  text-shadow: 1px lightgray;
+  width: 90px;
+  
+}
+
+.button img {
+  margin: 0 20px 0 0;
+  vertical-align: middle;
+}
+
+.content {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  width: 500px;
+}
+
+.content p {
+  font-size: 14px;
+  margin: 10px 40px;
+}
+
+.download {
+  width: 500px;
+  height: 100px;
+  padding: 0 25px;
+  margin: 30px 0 0 10px;
+}
+
+.footer-links {
+  margin: 0 10px 0 0;
+  font-size: 12px;
+  text-align: center;
+}
+
+.footer-links li {
+  display: inline-block;
+  margin: 0 15px 0 0;
+}
+
+.footer-links a {
+  color: #1c5380;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 10px;
+}
+
+copyright {
+  color: gray;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 10px;
 }
