--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,49 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+section {
+  display: flex;
+  justify-content: center;
+}
+
+.background-div{
+  background-size: cover;
+  background-image: url("../images/frame.png");
+  width: 425px;
+  padding-left: 50px;
+  padding-top: 30px;
+  margin-left:30px;
+
+}
+
+.icone-app{
+  padding-left: 50px;
+}
+
+.button{
+  align-items: center;
+  margin-left: 30px;
+  
+}
+
+.button > img{
+  margin-right: 58px;
+  margin-bottom: 15px;
+}
+
+button{
+  height: 40px;
+  width: 100px;
+}
+
+
+.rodape{
+  display: flex;
+  justify-content: center;
+  
+}
+
+footer > a{
+  word-spacing: 15px;
+}
