--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,92 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
 }
+
+.cell {
+    background-image: url(../images/phones.png);
+    background-repeat: no-repeat;
+    height: 700px;
+    width: 500px;
+    background-size: 400px;
+}
+
+#main {
+  display: flex;
+  /* align-content: center; */
+  justify-content: center;
+
+  /* height: 200px; */
+  padding: 100px 100px 30px 100px;
+}
+
+#content {
+  width: 700px;
+}
+
+#background-text {
+  background-image: url(../images/frame.png);
+  background-size: 800px;
+  background-repeat: no-repeat;
+  padding: 40px;
+  width: 700px;
+  box-sizing: border-box;  
+}
+
+#background-text > h2{
+  font-size: 40px;
+  margin: 0 auto;
+  color: #1c5380;
+} 
+#background-text > p{
+  font-size: 25px;
+  /* margin: 0 auto; */
+} 
+
+#background-text img{
+  margin-right: 20px;
+  width: 200px;
+}
+
+#logo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 700px;
+  padding: 0 10px;
+  box-sizing: border-box;  
+}
+#logo > input {
+  height: 50px;
+  width: 100px;
+  background-color: #1c5380;
+  border: 1px solid #06365f;
+  color: white;
+  background-image: url(../images/home.png);
+  background-repeat: no-repeat;
+  background-position: left;
+  padding-left: 10px;
+}
+
+footer {
+  /* display: inline-block; */
+  margin: 0 35%;
+  display: flex;
+  justify-content: space-between;
+  /* width: 1000px; */
+  /* align-items: center; */
+}
+
+footer > a{
+  text-decoration: none;
+  color: #1c5380;
+  margin: 0;
+}
+
+footer > p {
+  color: rgba(0, 0, 0, 0.37);
+  margin: 0;
+}
+
