--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -32,6 +32,7 @@ body {
   height: 45px;
   border-radius: 5px;
   font-weight: bold;
+  cursor: pointer;
 }
 
 
@@ -74,7 +75,7 @@ body {
   justify-content: center;
 }
 
-.apps img {
+.apps input {
   margin: 0 10px;
 }
 
