changed justify-content to center in main container

--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -108,7 +108,7 @@ footer a {
   width: 85%;
   margin: 0 auto;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   
 }
