--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,86 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  /* padding: 10% 10% 5%;  */
+  background-image: url(/Users/juliaramos/code/labs/week2/lab-css-instagram-clone/starter-code/images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+#index {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 150px;
+}
+
+#index > div > img {
+  margin-right: 50px;
+}
+
+#header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 10px;
+}
+
+#login {
+  border: 1px solid #1c5380;
+  background: linear-gradient(360deg, #1c5380 0%, #2379b2 100%);
+  border-radius: 3px;
+  padding: 0 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  align-content: center;
+}
+
+#login > img {
+margin-right: 10px;
+}
+
+#login > p {
+  display: inline;
+  color: #FFF;
+  font-weight: bold;
+}
+
+#content {
+  width: 500px;
+  box-sizing: border-box;
+  background-image: url(/Users/juliaramos/code/labs/week2/lab-css-instagram-clone/starter-code/images/frame.png);
+  background-repeat: no-repeat;
+  padding: 35px;
+}
+
+#text > h1 {
+  color: #06365f;
+  margin: 0;
+}
+
+#download > img:last-child {
+  margin-left: 15px;
+}
+
+footer > ul {
+  margin: 75px 0;
+  padding: 0;
+  text-align: center;
+}
+
+footer > ul > li {
+  display: inline;
+  list-style: none;
+  margin: auto 10px;
+  color: #1c5380;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 0.7em;
+}
+
+footer > ul > li:last-child {
+  color: gray;
 }
