--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,7 +8,10 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   margin-top: 100px;
-  /* background-color:; */
+  background-image: url('../images/bgtile.png');
+  background-repeat: repeat-x;
+  /* background-image:linear-gradient(180deg, #577ea0, #396287); */
+
 }
 
 section {
@@ -47,21 +50,23 @@ section {
   
 }
 
-.button > img{
-  margin-right: 58px;
-  margin-bottom: 15px;
+button > img{
+  padding: 5px;
 }
 
 button{
   display: flex;
   align-items: center;
-  border: outset;
+  /* border: outset; */
   font-weight: bold;
   color: aliceblue;
   background-color:#396287;
   border-color: #396287;  
   background-image:linear-gradient(180deg, #577ea0, #396287);
-  border-radius: 5px;
+  /* border-radius: 5px; */
+  padding: 6px;
+
+
 }
 
 
@@ -83,12 +88,11 @@ button{
 }
 
 .background{
-  background-image: url('../images/bgtile.png');
-  background-repeat: repeat-x;
+  /* background-image: url('../images/bgtile.png');
+  background-repeat: repeat-x; */
   /* background-image: linear-gradient(180deg, #577ea0, #396287); */
   
 }
-
 
 
 .right-side{
