--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,104 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+h2 {
+  color: #3b6f98;
+}
+
+.blue {
+  width: 100%;
+  height: 300px;
+  background: linear-gradient(to bottom, #3b6f98, #4480af)
+}
+
+
+
+.imagen_der {
+  box-flex: center;
+  padding-left: 30%;
+  /* top: 50%;
+  left: 50%; */
+  transform: translate(-30%, -30%);
+  
+}
+
+
+
+.texto1 {
+  float: right;
+  background-image: url(../images/frame.png) ; 
+  background-repeat:no-repeat;
+  align-items: center;
+  padding: 30px;
+  /* position: relative; */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -30%);
+}
+
+footer div a {
+  
+  padding: 20px;
+  font-size: 14px;
+  color: #3b6f98;
+  justify-content: center;
+  align-items: center;
+  align-items: baseline;
+  justify-content: center;
+  font-weight: bold;
+  text-decoration: none;
+  vertical-align: middle;
+}
+
+
+footer {
+  clear: both;
+  color: lightslategray;
+  position: absolute;
+}
+
+/* h2 {
+  color: #3b6f98;
+}
+
+.imagen_der {
+  float: left;
+  position: absolute;
+} */
+
+/* aside div div {
+  float: right;
+  height: 250px;
+  margin-left: 10px;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 300px;
+}  */
+
+/* footer div a {
+  
+  padding: 20px;
+  font-size: 14px;
+  color: #3b6f98;
+  justify-content: center;
+  align-items: center;
+  align-items: baseline;
+  justify-content: center;
+  font-weight: bold;
+  text-decoration: none;
+  vertical-align: middle;
+} */
+
+/* footer {
+  clear: both;
+  color: lightslategray;
+  position: absolute;
+} */
+
+/* 
+text-decoration: none;
+  font-size: 14px; */
+  
