--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,68 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: white;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+.container-1 {
+  display: flex;
+  justify-content: space-around;
+  margin: 100px 0;
+}
+
+.container-2 {
+  width: 40%;
+}
+
+.container-3 {
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-size: 95%;
+  padding: 10px 40px;
+}
+
+h2 {
+  color: #06365f;
+}
+
+p {
+  line-height: 1.5em;
+  font-weight: 100;
+}
+
+ul {
+  display: flex;
+  justify-content: space-around;
+  list-style-type: none;
+  font-size: 0.8em;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding: 0 200px 20px 200px;
+}
+
+a {
+  color: #1c5380;
+  text-decoration: none;
+}
+
+button {
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  border: 1px solid #06365f;
+  border-radius: 5px;
+  padding: 5px;
+  margin: 15px 0;
+  font-weight: bold;
+  color: white;
+}
+
+.flexbox {
+  display: flex;
+  justify-content: space-between;
+}
+
+span {
+  color: #999999;
 }
