--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,19 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  color: #06365f
+}
+.title{
+  font-family: 'DM Serif Display', serif;
+  color: #1c5380
+}
+.phones {
+  display: flex;
+}
+
+.principal{
+  display: flex;
+}
+.logo{
+  display: flex;
 }
