--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,52 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+* {
+  margin: 0;
+  padding: 0;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+h1 {
+  color: #06365f; 
+}
+span {
+  font-weight: bold;
+}
+.flexbox {
+  display: flex;
+  justify-content: space-around;
+  padding: 0 auto;
+}
+
+.flexbox img{
+  width: 24%
+}
+
+.text-div {
+  width: 40%;
+  margin: 100px;
+}
+
+.text-div p {
+  padding: 10px 0;
+}
+
+a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color:  #1c5380;
+  font-weight: bold;
+}
+
+li {
+  display: inline-block;
+  text-align: right;
+
 }
