--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,66 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+h2 {
+  color: #06365f;
+}
+
+header {
+  display: flex;
+  align-items: left;
+}
+
+.insta-logo{
+  padding: 100px 0 0 600px;
+}
+.phones {
+  display: flex;
+  justify-content: space-around;
+  padding: 10px 100px;
+  
+}
+
+a {
+  text-decoration: none;
+  color: #1c5380;
+}
+
+ul {
+  display: flex;
+  justify-content: space-around;
+  list-style-type: none;
+  font-size: 0.8em;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding: 0 200px 20px 200px;
+}
+
+.square {
+  
+  margin: 0 200px;
+  background-color: white;
+  padding: 20px;
+}
+
+button {
+  background-color: white;
+  border: none;
+}
+
+small {
+  position: relative;
+  left: 1000px;
+}
+
+.inicio {
+  background-color: #1c5380;
+  border: none;
+  margin: 17px;
+  font-size: 1.2em;
+  color: white;
+  box-shadow: 2px 2px 10px #06365f;
 }
