--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,78 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+header{
+  background-color: #1c5380;
+  padding: 100px 0px;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+nav {
+  padding-top: 15px;
+  height: 100px;
+  text-align: center;
+  margin-top: 100px;
+}
+
+nav li{
+  text-transform:uppercase;
+}
+nav a {
+  color: #1c5380;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+h2{
+  margin-left: 600px;
+  color: #06365f;
+}
+
+p{
+  text-align: justify;
+  margin-left: 600px;
+  margin-right:200px;
+}
+
+.login{
+  /*background-image: url("../images/home.png");*/
+  background-color:#1c5380;
+  color: white;
+  float: right;
+  margin-top: 30px;
+  margin-right: 300px;
+}
+
+.top-links{  
+display: inline-block;
+float: inherit;
+padding: 0;
+margin: 0 20px 0 0;
+}
+
+.top-links li{
+  display: inline-block;
+  margin: 0 10px;
+}
+
+.image-phones{
+  position: absolute; 
+  left: 40px; 
+  top: 40px;"
+}
+
+.image-instagram{
+  margin-left: 500px;
+}
+
+.parrafo{
+  margin-top:100px;
+}
+
+.botones{
+  margin-left: 600px;
 }
